# stm32-context-switch-example

./: .gitignore  Cargo.toml  README.md  memory.x
src/: bios.rs  dispatcher.rs  fifo.rs  global_peripherals.rs  main.rs  ring_buffer.rs  scheduler.rs  syscalls.rs  task.rs  text.txt
src/syscalls/: kernel_mode.rs  mod.rs  stubs.rs
