[package]
name = "stm32-context-switch-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-alloc = "0.5.1"
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f446"] }
heapless = "0.8.0"
